# ShiftFlamework

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-single-platform.yml
editor/: create_new_project.py
include/: camera.hpp  component.hpp  dds_loader.hpp  engine.hpp  entity.hpp  entity_script.hpp  entity_store.hpp  export_object.hpp  gpu_material_buffer.hpp  gpu_mesh_buffer.hpp  gpu_transform_buffer.hpp  graphics.hpp  input.hpp  material.hpp  material_store.hpp  matrix.hpp  matrix_utility.hpp  mesh.hpp  mesh_renderer.hpp  module.hpp  number.h  physics.hpp  piller.h  player.h  quaternion.hpp  reflection_renderer.hpp  reflection_renderer_pass.hpp  rigid_body.hpp  screenspace_material.hpp  screenspace_mesh.hpp  screenspace_mesh_renderer.hpp  screenspace_mesh_store.hpp  screenspace_physics.hpp  screenspace_transform.hpp  screenspace_transform_store.hpp  script.hpp  test_image.h  texture.hpp  title.h  transform.hpp  (+4 more)
resource/: index.html  test_image.xcf
runtime/: CMakeLists.txt  main.cpp
runtime/include/: engine.hpp  engine_import.hpp  entity.hpp  graphics.hpp  mesh.hpp  module.hpp  screenspace_mesh.hpp  screenspace_transform.hpp  test_image.h  vector.hpp  window.hpp
runtime/source/: script.cpp
sample/script_import/: CMakeLists.txt
sample/script_import/include/: entity.hpp  entity_script.hpp  test_script.hpp
sample/script_import/source/: test_script.cpp
source/: dds_loader.cpp  engine.cpp  entity.cpp  export_object.cpp  graphics.cpp  handmade_export.cpp  input.cpp  main.cpp  material.cpp  material_store.cpp  mesh.cpp  reflection_renderer.cpp  reflection_renderer_pass.cpp  rigid_body.cpp  screenspace_material.cpp  screenspace_mesh.cpp  screenspace_mesh_renderer.cpp  screenspace_mesh_store.cpp  screenspace_physics.cpp  screenspace_transform.cpp  screenspace_transform_store.cpp  script.cpp  transform.cpp  window.cpp
